--- a/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
+++ b/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
@@ -71,18 +71,20 @@
     <Compile Include="OSSIndex\ApiError.cs" />
     <Compile Include="OSSIndex\ApiClientException.cs" />
     <Compile Include="OSSIndex\ApiResponse.cs" />
-    <Compile Include="ArtifactSearch.cs" />
     <Compile Include="AuditResult.cs" />
     <Compile Include="AuditStatus.cs" />
     <Compile Include="NugetAuditor.cs" />
     <Compile Include="OSSIndex\ApiClientBase.cs" />
     <Compile Include="OSSIndex\ApiResponses.cs" />
+    <Compile Include="OSSIndex\ComponentReport.cs" />
     <Compile Include="OSSIndex\IApiClient.cs" />
     <Compile Include="OSSIndex\ApiClient.cs" />
     <Compile Include="OSSIndex\Package.cs" />
     <Compile Include="PackageId.cs" />
     <Compile Include="PackageReference.cs" />
     <Compile Include="PackageReferencesFile.cs" />
+    <Compile Include="PackageURL\MalformedPackageUrlException.cs" />
+    <Compile Include="PackageURL\PackageURL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OSSIndex\Vulnerability.cs" />
   </ItemGroup>
